--- a/Jojo Vectores/Jojo Vectores/Base.lproj/Main.storyboard
+++ b/Jojo Vectores/Jojo Vectores/Base.lproj/Main.storyboard
@@ -74,24 +74,24 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Ac4-vX-Drc" userLabel="StackTop">
-                                <rect key="frame" x="16" y="72" width="288" height="30"/>
+                                <rect key="frame" x="17" y="72" width="286" height="30"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BJ4-ge-ZmR">
-                                        <rect key="frame" x="0.0" y="0.0" width="98" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BJ4-ge-ZmR">
+                                        <rect key="frame" x="0.0" y="0.0" width="96" height="30"/>
                                         <state key="normal" title="Componentes"/>
                                         <connections>
                                             <action selector="showComponents:" destination="BV1-FR-VrT" eventType="touchUpInside" id="XUm-hk-X6E"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bb6-rF-m0j">
-                                        <rect key="frame" x="128" y="0.0" width="91" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bb6-rF-m0j">
+                                        <rect key="frame" x="126" y="0.0" width="91" height="30"/>
                                         <state key="normal" title="Mover vector"/>
                                         <connections>
                                             <action selector="moveVector:" destination="BV1-FR-VrT" eventType="touchUpInside" id="kym-OE-3SH"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QOP-am-9iS">
-                                        <rect key="frame" x="249" y="0.0" width="39" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QOP-am-9iS">
+                                        <rect key="frame" x="247" y="0.0" width="39" height="30"/>
                                         <state key="normal" title="Suma"/>
                                         <connections>
                                             <action selector="calculateSum:" destination="BV1-FR-VrT" eventType="touchUpInside" id="nBc-hW-nro"/>
@@ -100,16 +100,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="ude-ts-bT0" userLabel="StackSum">
-                                <rect key="frame" x="93" y="110" width="134" height="20.5"/>
+                                <rect key="frame" x="68" y="110" width="185.5" height="20.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bko-Dd-ewt">
-                                        <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Magnitud:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bko-Dd-ewt">
+                                        <rect key="frame" x="0.0" y="0.0" width="77" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.049244631168781194" green="1" blue="0.0034353450977743227" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OhI-cG-kfj">
-                                        <rect key="frame" x="92" y="0.0" width="42" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Angulo:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OhI-cG-kfj">
+                                        <rect key="frame" x="127" y="0.0" width="58.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.049244631169999997" green="1" blue="0.0034353450979999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -121,11 +121,10 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="A73-lX-ugh" secondAttribute="trailing" id="2bG-BO-kiy"/>
                             <constraint firstItem="ude-ts-bT0" firstAttribute="top" secondItem="Ac4-vX-Drc" secondAttribute="bottom" constant="8" id="7QJ-h2-foK"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ac4-vX-Drc" secondAttribute="trailing" id="H05-8g-0dY"/>
-                            <constraint firstItem="Ac4-vX-Drc" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leadingMargin" id="IuI-R4-0vC"/>
                             <constraint firstItem="ude-ts-bT0" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="LXb-7g-oQu"/>
-                            <constraint firstItem="Ac4-vX-Drc" firstAttribute="top" secondItem="8aa-yV-Osq" secondAttribute="bottom" constant="8" id="MBL-UZ-EtA"/>
+                            <constraint firstItem="Ac4-vX-Drc" firstAttribute="top" secondItem="8aa-yV-Osq" secondAttribute="bottom" constant="8" id="OpG-0s-igd"/>
                             <constraint firstItem="4h9-ON-gx3" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leadingMargin" constant="25" id="UFD-Tt-IbZ"/>
+                            <constraint firstItem="Ac4-vX-Drc" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="YCx-fk-RdJ"/>
                             <constraint firstItem="A73-lX-ugh" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" id="i8k-CV-RbI"/>
                             <constraint firstItem="A73-lX-ugh" firstAttribute="top" secondItem="4h9-ON-gx3" secondAttribute="bottom" constant="2.5" id="kWK-fH-lCr"/>
                             <constraint firstItem="A73-lX-ugh" firstAttribute="bottom" secondItem="qHh-Mt-9TT" secondAttribute="top" id="qBE-8O-fkR"/>
